// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error Snapshot Testing. Throws error: ID Present, Empty Array Search 1`] = `
"[2mexpect([22m[31mFeatureObject[39m[2m).not.toHaveNumericID([22m[32mSearchID[39m[2m)[22m

Expected input to not be a valid GeoJSON Feature object with number type ID.

Received:  [31m{\\"geometry\\": null, \\"id\\": 22, \\"properties\\": null, \\"type\\": \\"Feature\\"}[39m"
`;

exports[`Error Snapshot Testing. Throws error: ID Present, Search for Wrong ID 1`] = `
"[2mexpect([22m[31mFeatureObject[39m[2m).toHaveNumericID([22m[32mSearchID[39m[2m)[22m

Did not find the numeric ID 21.

Received:  [31m{\\"geometry\\": null, \\"id\\": 22, \\"properties\\": null, \\"type\\": \\"Feature\\"}[39m"
`;

exports[`Error Snapshot Testing. Throws error: ID Present, Search for Wrong ID 2`] = `
"[2mexpect([22m[31mFeatureObject[39m[2m).toHaveNumericID([22m[32mSearchID[39m[2m)[22m

Did not find the numeric ID 23.

Received:  [31m{\\"geometry\\": null, \\"id\\": 22, \\"properties\\": null, \\"type\\": \\"Feature\\"}[39m"
`;

exports[`Error Snapshot Testing. Throws error: Invalid input to matcher 1`] = `
"[2mexpect([22m[31mFeatureObject[39m[2m).toHaveNumericID([22m[32mSearchID[39m[2m)[22m

Must have a type property with value 'Feature'

Received:  [31m{\\"coordinates\\": [[101, 0], [102, 1]], \\"type\\": \\"LineString\\"}[39m"
`;

exports[`Error Snapshot Testing. Throws error: No ID Is Present 1`] = `
"[2mexpect([22m[31mFeatureObject[39m[2m).toHaveNumericID([22m[32mSearchID[39m[2m)[22m

Feature does not have an \\"id\\" member.

Received:  [31m{\\"geometry\\": null, \\"properties\\": null, \\"type\\": \\"Feature\\"}[39m"
`;

exports[`Error Snapshot Testing. Throws error: No ID Is Present 2`] = `
"[2mexpect([22m[31mFeatureObject[39m[2m).toHaveNumericID([22m[32mSearchID[39m[2m)[22m

Feature does not have an \\"id\\" member.

Received:  [31m{\\"geometry\\": null, \\"properties\\": null, \\"type\\": \\"Feature\\"}[39m"
`;

exports[`Error Snapshot Testing. Throws error: Non-numeric search ID 1`] = `
"[2mexpect([22m[31mFeatureObject[39m[2m).toHaveNumericID([22m[32mSearchID[39m[2m)[22m

Did not find the numeric ID 1.

Received:  [31m{\\"geometry\\": {\\"coordinates\\": [[[100, 0], [101, 0], [101, 1], [100, 1], [100, 0]]], \\"type\\": \\"Polygon\\"}, \\"id\\": 1, \\"properties\\": null, \\"type\\": \\"Feature\\"}[39m"
`;

exports[`Error Snapshot Testing. Throws error: String ID 1`] = `
"[2mexpect([22m[31mFeatureObject[39m[2m).toHaveNumericID([22m[32mSearchID[39m[2m)[22m

ID is a string, expected a number.

Received:  [31m{\\"geometry\\": null, \\"id\\": \\"22\\", \\"properties\\": null, \\"type\\": \\"Feature\\"}[39m"
`;

exports[`Error Snapshot Testing. Throws error: Valid use case passes 1`] = `
"[2mexpect([22m[31mFeatureObject[39m[2m).not.toHaveNumericID([22m[32mSearchID[39m[2m)[22m

Expected input to not be a valid GeoJSON Feature object with number type ID.

Received:  [31m{\\"geometry\\": {\\"coordinates\\": [[[100, 0], [101, 0], [101, 1], [100, 1], [100, 0]]], \\"type\\": \\"Polygon\\"}, \\"id\\": 755, \\"properties\\": null, \\"type\\": \\"Feature\\"}[39m"
`;
